--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!--Estrututa do topo da pagina-->
         <header id="area-cabecalho">
-            <figure id="logo-tipo"><img src=""></figure>
+            <figure id="logo-tipo"><img src="img/logo-type.png"></figure>
             
             <div id="container-button">
                 <button id="abrir-info-menu"><i class="fas fa-bars"></i></button>
